# workspace

./: .env  .gitignore  Cargo.toml  Makefile  README.md  Shuttle.toml  compose.yml  dockerfile  makefile  private_key.pem
.bitcoin/: bitcoin.conf
.github/workflows/: publish-github-release.yml
api/: Cargo.toml
api/actix/: Cargo.toml
api/actix/db/: init_database.sql
api/actix/src/: app.rs  config.rs  main.rs
api/actix/src/constance/: mod.rs
api/actix/src/controller/: blindsign.rs  coinjoin.rs  statechain.rs
api/actix/src/db/: mod.rs
api/actix/src/middleware/: logging.rs
api/actix/src/model/entity/: coinjoin.rs  mod.rs  statechain.rs
api/actix/src/repo/: mod.rs
api/actix/src/repo/coinjoin/: mod.rs  source.rs
api/actix/src/repo/statechain/: mod.rs  source.rs
api/actix/src/route/: coinjoin.rs  mod.rs  statechain.rs
api/actix/src/svc/: account.rs  blindsign.rs  coinjoin.rs  mod.rs  statechain.rs
api/actix/src/util/: response.rs
api/db/: init_database.sql
api/lib/src/route/: mod.rs
api/src/: app.rs  config.rs  main.rs
api/src/constance/: mod.rs
api/src/controller/: coinjoin.rs  mod.rs  statechain.rs
api/src/db/: mod.rs
api/src/middleware/: error_handler.rs  logging.rs  mod.rs
api/src/model/entity/: coinjoin.rs  statechain.rs
api/src/repo/: coinjoin.rs  mod.rs
api/src/repo/coinjoin/: mod.rs  source.rs
api/src/repo/statechain/: mod.rs  source.rs
api/src/route/: blindsign.rs  coinjoin.rs  mod.rs
api/src/svc/: blindsign.rs  coinjoin.rs  mod.rs  statechain.rs
api/src/util/: response.rs
db/: sqlite.db  sqlite.db-shm  sqlite.db-wal
front/: .env  package-lock.json  package.json
front/src-tauri/: Cargo.toml  Settings.toml  tauri.conf.json
front/src-tauri/db/: init_database.sql
front/src-tauri/src/: cfg.rs  connector.rs  main.rs
front/src-tauri/src/api/: blindsign.rs  coinjoin.rs  mod.rs  statechain.rs
front/src-tauri/src/cfg/: mod.rs
front/src-tauri/src/cmd/: account.rs  app.rs  auth.rs  coinjoin.rs  mod.rs  statechain.rs
front/src-tauri/src/db/: db.rs  mod.rs  sqlite.rs  statecoin.rs
front/src-tauri/src/model/: account.rs  mod.rs  room.rs  state.rs  statechain.rs
front/src-tauri/src/model/event/: mod.rs
front/src-tauri/src/plug/: account.rs  app.rs  coinjoin.rs  mod.rs  statechain.rs
front/src-tauri/src/store/: master_account.rs  mod.rs
front/src-tauri/src/svc/: account.rs  app.rs  blindsign.rs  coinjoin.rs  context.rs  mnemonic.rs  mod.rs  statechain.rs  statechain_deposit.rs  statechain_receiver.rs  statechain_sender.rs  tx.rs  unlocker.rs  utxo.rs
front/src-tauri/src/svc/statechain/: mod.rs  util.rs
front/src-tauri/src/svc/statecoin/: broadcast_backup_tx.rs  client_config.rs  coin_status.rs  deposit.rs  mod.rs  sqlite_manager.rs  transaction.rs  transfer_receiver.rs  transfer_sender.rs  utils.rs  wallet.rs  withdraw.rs
front/src-tauri/src/util/: mod.rs
front/src/apis/: account.api.ts  app.api.ts  coinjoin.api.ts  index.ts  statechain.api.ts  wallet.api.ts
front/src/apis/core/: index.ts  tauri.connector.ts
front/src/components/: copier.tsx  explorer-link.tsx  index.ts
front/src/components/auth/: sign-in.tsx  sign-up.tsx
front/src/components/coinjoin/: coinjoin-card.tsx  coinjoin-list.tsx  coinjoin-status.tsx  index.ts
front/src/components/coinjoin-room-card/: coinjoin-room-status.tsx  index.tsx
front/src/components/drawer/: index.tsx
front/src/components/edge-cases/: error.tsx  loading.tsx
front/src/components/layout/: index.tsx
front/src/components/navbar/: index.tsx
front/src/components/profile/: index.tsx  list-coinjoin-room.tsx  list-statechain.tsx
front/src/components/qr-code-generator/: index.tsx
front/src/components/statechain/: index.ts  statechain-card.tsx  statechain-list.tsx  statechain-transfer-card.tsx  statechain-transfer-list.tsx
front/src/components/statechain-card/: index.tsx
front/src/components/statecoin-to-send-card/: index.tsx
front/src/components/utxo/: index.ts  utxo-card.tsx  utxo-list.tsx
front/src/components/utxo-card/: index.tsx
front/src/consts/: cache-prefix-key.ts  index.ts  storage-keys.ts
front/src/dtos/: account.dto.ts  coinjoin.dto.ts  index.ts  statechain.dto.ts  wallet.dto.ts
front/src/hooks/: index.ts  use-coinjoin-form.ts  use-deposit-form.ts  use-init.ts  use-initialize.ts  use-send-statecoin-form.ts  use-sign-in-form.ts  use-sign-up-form.ts
front/src/hooks/atoms/: index.ts  use-app.ts  use-deriv.ts  use-logout.ts  use-noti.ts  use-statecoin-detail.ts
front/src/hooks/pages/: index.ts  use-auth-page.ts  use-deposit-page.ts  use-profile-page.ts  use-seed-phrase-page.ts  use-send-page.ts  use-send-statecoin-page.ts
front/src/lib/: create-emotion-cache.ts
front/src/lib/theme/: index.ts  menu.ts
front/src/pages/: _app.tsx  _document.tsx  home.tsx  index.tsx  setup.tsx
front/src/pages/home/: index.tsx
front/src/pages/profile/[deriv]/: deposit.tsx  index.tsx  receive-statecoin.tsx  send-statecoin.tsx  send.tsx  withdraw.tsx
front/src/pages/seedphrase/: generate.tsx  import.tsx  index.tsx
front/src/pages/setting/: index.tsx
front/src/stores/: app.state.ts
front/src/styles/: global.css
front/src/styles/components/: select.ts
front/src/utils/: index.ts
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/api/: mod.rs
shared/src/blindsign/: keypair.rs  mod.rs  request.rs  session.rs  signature.rs
shared/src/intf/: blindsign.rs  coinjoin.rs  mod.rs  statechain.rs
shared/src/model/: mod.rs  resp.rs
shared/src/model/core/: mod.rs
shared/src/util/: mod.rs
statechain-core/: Cargo.toml
statechain-core/src/: lib.rs  transaction.rs
statechain-core/src/deposit/: mod.rs
statechain-core/src/transfer/: mod.rs  receiver.rs  sender.rs
statechain-core/src/wallet/: cpfp_tx.rs  key_derivation.rs  mod.rs
wallet/: Cargo.toml
wallet/src/: error.rs  lib.rs
wallet/src/cfg/: mod.rs  word_mnemonic.rs
wallet/src/core/: account.rs  account_address_type.rs  context.rs  instantiated_key.rs  key_derivation.rs  master_account.rs  mnemonic.rs  mod.rs  seed.rs  unlocker.rs
(+1 files in other folders)
