[workspace]
resolver = "2"
members = ["api/actix", "api/lib", "shared", "front/src-tauri", "wallet"]

[workspace.dependencies]
# internal
shared = { version = "0.1.0", path = "./shared" }
wallet = { version = "0.1.0", path = "./wallet" }
api-lib = { version = "0.1.0", path = "./api/lib" }

# actix
actix-web = "4.4.1"

# utils
dotenv = "0.15.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
base64 = "0.21.5"

serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
