[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
backend = []
frontend = []

[dependencies]
# utils
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

reqwest = { workspace = true }

# cryptography
hex = { workspace = true }
rand = { workspace = true }
curve25519-dalek = { workspace = true }
digest = "0.10.7"
subtle = "2.5.0"
