[package]
name = "statechain_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { workspace = true, features = [
  "serde",
  "base64",
  "rand-std",
  "std",
], default-features = false }

secp256k1 = { workspace = true }

bip39 = "1.2.0"
bech32 = { version = "0.9.1", default-features = false }
ecies = { version = "0.2", default-features = false, features = ["pure"] }
hex = "0.4.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
secp256k1-zkp = { git = "https://github.com/tinguyen1107/rust-secp256k1-zkp.git", branch = "blinded-musig-scheme", features = [
  "rand-std",
  "hashes",
  "std",
] }
anyhow = "1.0"
# secp256k1-zkp = "0.10.1"
