[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }

bitcoin = { workspace = true, features = [
  "serde",
  "rand-std",
  "bitcoinconsensus",
  "actual-serde",
] }
rust-crypto = "0.2"
secp256k1 = { workspace = true }
