[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# utils
serde_json = { workspace = true }
serde = { workspace = true }

# cryptography
bitcoin = { workspace = true, features = [
  "serde",
  "rand-std",
  "bitcoinconsensus",
  "actual-serde",
] }
rust-crypto = { workspace = true }
secp256k1 = { workspace = true }
