[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cryptography
shared = { workspace = true, features = ["frontend", "backend"] }
bitcoin = { workspace = true, features = [
  "serde",
  "rand-std",
  "bitcoinconsensus",
  "actual-serde",
] }
rust-crypto = { workspace = true }
secp256k1 = { workspace = true }

# utils
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
