[package]
name = "node-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
shared = { workspace = true, features = ["backend"] }

actix-web = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
dotenv = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

bitcoin = { workspace = true, features = ["serde"] }

sqlx = { version = "0.7.3", default-features = false, features = [
  "runtime-tokio-native-tls",
  "macros",
  "postgres",
  "sqlite",
  "uuid",
  "chrono",
  "json",
] }
actix-rt = "2.9.0"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.1"
lazy_static = "1.4.0"
listenfd = "1.0.1"
log = "0.4.20"
num-bigint = "0.4.4"
num-traits = "0.2.17"
openssl = "0.10.59"
postgres = "0.19.7"
r2d2 = "0.8.10"

digest = "0.10.7"
curve25519-dalek = { version = "4.1.1", features = ["rand_core", "digest"] }
rand = "0.8.5"
failure = "0.1.8"
failure_derive = "0.1.8"
sha3 = "0.10.8"
subtle = "2.5.0"
hex = "0.4.3"
secp256k1-zkp = "=0.6.0"
secp256k1.workspace = true
musig2 = "0.0.11"
