[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.3", features = ["fs-all", "path-all"] }

# Workspace
shared = { workspace = true, features = ["frontend"] }
wallet = { workspace = true }

serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }


bitcoin = { version = "0.31.0", features = [
  "serde",
  "rand-std",
  "bitcoinconsensus",
  "actual-serde",
] }
rust-crypto = "0.2"

clap = { version = "4.3.19", features = ["derive"] }
hex = "0.4.3"
openssl = "0.10.59"
reqwest = { version = "0.11.18", features = ["json"] }
secp256k1 = { version = "0.27.0", features = ["rand-std"] }
lazy_static = "1.4.0"
bonsaidb = "0.5.0"
bonsaidb-local = "0.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
sled = "0.34.7"
bincode = "1.3.3"

failure = "0.1.8"
failure_derive = "0.1.8"
rand = "0.8.5"

digest = "0.10.7"
curve25519-dalek = { version = "4.1.1", features = ["rand_core", "digest"] }
sha3 = "0.10.8"
subtle = "2.5.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
