[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.3", features = ["fs-all", "path-all", "wry"] }

# Workspace
shared = { workspace = true, features = ["frontend"] }
wallet = { workspace = true }
statechain_core = { workspace = true }
secp256k1 = { workspace = true }

# utils
dotenv = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }

clap = { version = "4.3.19", features = ["derive"] }
lazy_static = { workspace = true }

# cryptography
bitcoin = { workspace = true, features = [
  "serde",
  "rand-std",
  "bitcoinconsensus",
  "actual-serde",
] }
rust-crypto = { workspace = true }
hex = { workspace = true }
curve25519-dalek = { workspace = true }
openssl = "0.10.59"
uuid = { version = "1.6.1", features = ["v4"] }

rand = { workspace = true }

digest = "0.10.7"
sha3 = "0.10.8"
subtle = "2.5.0"

# sqlx
sqlx = { workspace = true, default-features = false, features = [
  "runtime-tokio-native-tls",
  "sqlite",
  "migrate",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
